<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Zacja</string>
    <string name="action_settings">Ustawienia</string>
	<string name="action_list">Treningi</string>
	<string name="action_sync">Synchronizuj</string>
	<string name="signin">Zaloguj</string>
	<string name="signup">Rejestracja</string>
	<string name="username">Login</string>
	<string name="password">Hasło</string>

	<string name="email">E-Mail</string>
	<string name="repeat_password">Powtórz hasło</string>


	<!-- CTF -->

	<string name="txt_btn_scan">Skanuj</string>

	<!-- LIST -->
	<string name="moves">\u0020 powtórzeń w \u0020</string>
	<string name="succesions">\u0020 seriach</string>
	<string name="km_in">\u0020 kilometrów</string>
	<string name="scores">\u0020 punktów</string>
	<string name="distance">Dystans</string>
	<string name="avg_tempo">Tempo</string>
	<string name="avg_speed">Prędkość</string>
	<string name="time">Czas</string>
	<string name="time_active">Aktywny</string>
	<string name="upward">W górę</string>
	<string name="Downward">W dół</string>
	<string name="tempo_unit">min/km</string>
	<string name="metric_1000_unit">km</string>
	<string name="metric_speed_unit">km/h</string>
	<string name="metric_100_unit">m</string>
	<string name="delete_training_action">Usuń trening</string>
	<string name="score">punktów!</string>
	<string name="scanning_has_already_started">Skanowanie już trwa</string>
	<string name="one_scan_once_10s">Skanowanie można wykonać raz na 10s</string>
	<string name="conquer_error">Błąd w podboju!</string>
	<string name="conquer_too_far_from_start">Za bardzo oddaliłeś się od miejsca w którym zacząłeś skanowanie</string>
	<string name="already_conquered">Już podbiłeś to miejsce</string>
	<string name="time_for_training">Czas do następnej sesji</string>
	<string name="work_notification_title">Czas poćwiczyć!</string>
	<string name="work_notification_text">Co powiesz na krótki spacerek?</string>
	<string name="err_user_duplicate">Użytkownik o takim loginie już istnieje.</string>
	<string name="conquer_sync_finish">Conquer synchronizing finished</string>
	<string name="training_sync_finish">Training synchronizing finished</string>

</resources>
