<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

	<EditText
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/txt_r_login"
		android:layout_gravity="center_horizontal"
		android:hint="@string/username"/>

	<EditText
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/txt_r_email"
		android:layout_gravity="center_horizontal"
		android:hint="@string/email"/>

	<EditText
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="textPassword"
		android:ems="10"
		android:id="@+id/txt_r_pass1"
		android:layout_gravity="center_horizontal"
		android:password="true"
		android:hint="@string/password"/>

	<EditText
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="textPassword"
		android:ems="10"
		android:id="@+id/txt_r_pass2"
		android:layout_gravity="center_horizontal"
		android:password="true"
		android:hint="@string/repeat_password"/>

	<Button
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/signup"
		android:id="@+id/btn_up_signup"
		android:layout_gravity="center_horizontal"/>

	<Button
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/signin"
		android:id="@+id/btn_up_signin"
		android:layout_gravity="center_horizontal"/>
</LinearLayout>