<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:id="@+id/scrollView">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:gravity="center_vertical|center_horizontal"
		android:id="@+id/linearLayout"
		android:paddingBottom="16dp">

		<ImageView
			android:layout_width="256dp"
			android:layout_height="256dp"
			android:id="@+id/training_icon"
			android:layout_gravity="center_horizontal"
			android:src="@drawable/ic_launcher"
			android:paddingBottom="16dp"
			android:paddingLeft="16dp"
			android:paddingRight="16dp"
			android:paddingTop="0dp"
			android:contentDescription="Activity logo"/>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:text="Score"
				android:id="@+id/tv_score"
				android:layout_gravity="center_horizontal"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:text="@string/scores"
				android:id="@+id/tv_label_scores"/>
		</LinearLayout>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:id="@+id/tv_data"/>
		</LinearLayout>

		<TableLayout
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:layout_gravity="center_horizontal"
			android:padding="16dp">

			<TableRow
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:visibility="visible">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:text="@string/time"
					android:id="@+id/tv_label_time"
					android:layout_column="0"
					android:gravity="right"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:text="0:00:00"
					android:id="@+id/tv_time"
					android:layout_column="1"
					android:layout_gravity="left"
					android:paddingLeft="8dp"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:text="Small Text"
					android:id="@+id/textView20"
					android:layout_column="3"
					android:visibility="gone"/>
			</TableRow>

			<TableRow
				android:layout_width="fill_parent"
				android:layout_height="fill_parent">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:text="@string/avg_tempo"
					android:id="@+id/tv_label_tempo"
					android:layout_column="0"
					android:gravity="right"/>

				<LinearLayout
					android:orientation="horizontal"
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:layout_column="1">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textAppearance="?android:attr/textAppearanceMedium"
						android:text="0"
						android:id="@+id/tv_tempo"
						android:layout_column="2"
						android:paddingLeft="8dp"/>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textAppearance="?android:attr/textAppearanceSmall"
						android:text="@string/tempo_unit"
						android:id="@+id/tv_unit_tempo"
						android:layout_column="3"
						android:paddingLeft="8dp"
						android:layout_gravity="center"/>
				</LinearLayout>
			</TableRow>

			<TableRow
				android:layout_width="fill_parent"
				android:layout_height="fill_parent">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:text="@string/distance"
					android:id="@+id/tv_label_distance"
					android:layout_column="0"
					android:gravity="right"/>

				<LinearLayout
					android:orientation="horizontal"
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:layout_column="1"
					android:id="@+id/ll">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textAppearance="?android:attr/textAppearanceMedium"
						android:text="0"
						android:id="@+id/tv_distance"
						android:layout_column="2"
						android:layout_gravity="left"
						android:paddingLeft="8dp"/>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textAppearance="?android:attr/textAppearanceSmall"
						android:text="@string/metric_1000_unit"
						android:id="@+id/tv_unit_distance"
						android:layout_column="3"
						android:paddingLeft="8dp"
						android:layout_gravity="center"/>
				</LinearLayout>
			</TableRow>

			<TableRow
				android:layout_width="fill_parent"
				android:layout_height="fill_parent">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:text="@string/avg_speed"
					android:id="@+id/tv_label_speed"
					android:layout_column="0"
					android:gravity="right"/>

				<LinearLayout
					android:orientation="horizontal"
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:layout_column="1">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textAppearance="?android:attr/textAppearanceMedium"
						android:text="0"
						android:id="@+id/tv_speed"
						android:layout_column="2"
						android:layout_gravity="left"
						android:paddingLeft="8dp"/>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textAppearance="?android:attr/textAppearanceSmall"
						android:text="@string/metric_speed_unit"
						android:id="@+id/tv_unit_speed"
						android:layout_column="3"
						android:paddingLeft="8dp"
						android:layout_gravity="center"/>
				</LinearLayout>
			</TableRow>

			<TableRow
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:visibility="gone">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:text="@string/time_active"
					android:id="@+id/tv_label_time_active"
					android:layout_column="0"
					android:gravity="right"/>

				<LinearLayout
					android:orientation="horizontal"
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:layout_column="1">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textAppearance="?android:attr/textAppearanceMedium"
						android:text="0:00:00"
						android:id="@+id/tv_time_active"
						android:layout_column="2"
						android:layout_gravity="left"
						android:paddingLeft="8dp"/>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textAppearance="?android:attr/textAppearanceSmall"
						android:text="Small Text"
						android:id="@+id/textView21"
						android:layout_column="3"
						android:visibility="gone"/>
				</LinearLayout>
			</TableRow>

			<TableRow
				android:layout_width="fill_parent"
				android:layout_height="fill_parent">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:text="@string/upward"
					android:id="@+id/tv_label_upward"
					android:layout_column="0"
					android:gravity="right"/>

				<LinearLayout
					android:orientation="horizontal"
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:layout_column="1">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textAppearance="?android:attr/textAppearanceMedium"
						android:text="0"
						android:id="@+id/tv_upward"
						android:layout_column="2"
						android:layout_gravity="left"
						android:paddingLeft="8dp"/>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textAppearance="?android:attr/textAppearanceSmall"
						android:text="@string/metric_100_unit"
						android:id="@+id/tv_unit_upward"
						android:layout_column="3"
						android:paddingLeft="8dp"
						android:layout_gravity="center"/>
				</LinearLayout>
			</TableRow>

			<TableRow
				android:layout_width="fill_parent"
				android:layout_height="fill_parent">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:text="@string/Downward"
					android:id="@+id/tv_label_downward"
					android:layout_column="0"
					android:gravity="right"/>

				<LinearLayout
					android:orientation="horizontal"
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:layout_column="1">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textAppearance="?android:attr/textAppearanceMedium"
						android:text="0"
						android:id="@+id/tv_downward"
						android:layout_column="2"
						android:layout_gravity="left"
						android:paddingLeft="8dp"/>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textAppearance="?android:attr/textAppearanceSmall"
						android:text="@string/metric_100_unit"
						android:id="@+id/tv_unit_downward"
						android:layout_column="3"
						android:paddingLeft="8dp"
						android:layout_gravity="center"/>
				</LinearLayout>
			</TableRow>
		</TableLayout>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="Activity"
			android:id="@+id/tv_activity"
			android:layout_gravity="center_horizontal"
			android:gravity="center_vertical|center_horizontal"
			android:visibility="gone"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Date"
			android:id="@+id/tv_date"
			android:layout_gravity="center_horizontal"/>

	</LinearLayout>

</RelativeLayout>